fix oc get istag

--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
@@ -761,8 +761,8 @@ periodics:
         oc describe -n ${namespace} istag/machine-os-content:latest
 
         # Craft a release image
-        MOC_SHA256=$( oc get istag -n "${namespace}" istag/machine-os-content:latest -o template='{{ .image.metadata.name }}' )
         set -x
+        MOC_SHA256=$(oc get -n "${namespace}" istag/machine-os-content:latest -o template='{{ .image.metadata.name }}' )
         export RELEASE_IMAGE_LATEST=registry.svc.ci.openshift.org/${namespace}/release:latest
         oc registry login
         oc adm release new -n origin \
