Fix ci-operator params

--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
@@ -773,9 +773,10 @@ periodics:
         # execute the test
         ci-operator \
           --artifact-dir=$(ARTIFACTS) \
-          --namespace=${namespace} \
           --secret-dir=/usr/local/pull-secret \
           --secret-dir=/usr/local/e2e-$(CLUSTER_TYPE)-cluster-profile \
+          --input-hash=$(BUILD_ID) --input-hash=$(JOB_NAME) \
+          --lease-server=http://boskos \
           --target=e2e-$(CLUSTER_TYPE)
 
         # promote to fcos namespace
