Enable CI for cluster-resource-override-admission-operator repo

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -521,6 +521,7 @@ tide:
     - openshift/cluster-openshift-controller-manager-operator
     - openshift/cluster-policy-controller
     - openshift/cluster-resource-override-admission
+    - openshift/cluster-resource-override-admission-operator
     - openshift/cluster-samples-operator
     - openshift/cluster-storage-operator
     - openshift/cluster-svcat-apiserver-operator
@@ -714,6 +715,7 @@ tide:
     - openshift/cluster-openshift-controller-manager-operator
     - openshift/cluster-policy-controller
     - openshift/cluster-resource-override-admission
+    - openshift/cluster-resource-override-admission-operator
     - openshift/cluster-samples-operator
     - openshift/cluster-storage-operator
     - openshift/cluster-svcat-apiserver-operator
@@ -917,6 +919,7 @@ tide:
     - openshift/cluster-openshift-controller-manager-operator
     - openshift/cluster-policy-controller
     - openshift/cluster-resource-override-admission
+    - openshift/cluster-resource-override-admission-operator
     - openshift/cluster-samples-operator
     - openshift/cluster-storage-operator
     - openshift/cluster-svcat-apiserver-operator
