--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -1733,6 +1733,8 @@ plugins:
   - approve
   openshift/cluster-resource-override-admission:
   - approve
+  openshift/cluster-resource-override-admission-operator:
+  - approve
   openshift/cluster-samples-operator:
   - approve
   openshift/cluster-storage-operator:
