--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
@@ -775,9 +775,9 @@ periodics:
           --artifact-dir=$(ARTIFACTS) \
           --secret-dir=/usr/local/pull-secret \
           --secret-dir=/usr/local/e2e-$(CLUSTER_TYPE)-cluster-profile \
+          --template=/usr/local/e2e-aws \
           --input-hash=$(BUILD_ID) --input-hash=$(JOB_NAME) \
-          --lease-server=http://boskos \
-          --target=e2e-$(CLUSTER_TYPE)
+          --lease-server=http://boskos
 
         # promote to fcos namespace
         #oc tag ${namespace}/machine-os-content:latest fcos/machine-os-content:${BRANCH}
