Use OKD config key

--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
@@ -796,7 +796,7 @@ periodics:
       - name: CONFIG_SPEC
         valueFrom:
           configMapKeyRef:
-            key: openshift-origin-release-4.3.yaml
+            key: openshift-installer-fcos.yaml
             name: ci-operator-4.3-configs
       - name: JOB_NAME_SAFE
         value: e2e-aws
