--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
@@ -776,6 +776,7 @@ periodics:
           --secret-dir=/usr/local/pull-secret \
           --secret-dir=/usr/local/e2e-$(CLUSTER_TYPE)-cluster-profile \
           --template=/usr/local/e2e-aws \
+          --target=e2e-$(CLUSTER_TYPE) \
           --input-hash=$(BUILD_ID) --input-hash=$(JOB_NAME) \
           --lease-server=http://boskos
 
