Populate 2 more configMaps to build01

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -549,12 +549,16 @@ config_updater:
       name: prow-job-cluster-launch-installer-ovirt-e2e
     ci-operator/templates/openshift/installer/cluster-launch-installer-src.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: prow-job-cluster-launch-installer-src
     ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
