--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
@@ -771,6 +771,7 @@ periodics:
           machine-os-content=registry.svc.ci.openshift.org/${namespace}/machine-os-content@${MOC_SHA256}
 
         # execute the test
+        export RELEASE_IMAGE_INITIAL=${RELEASE_IMAGE_LATEST}
         ci-operator \
           --artifact-dir=$(ARTIFACTS) \
           --secret-dir=/usr/local/pull-secret \
