--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -623,66 +623,88 @@ config_updater:
       name: grafana-dashboard-definitions-0
     cluster/test-deploy/aws-4.0/*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: cluster-profile-aws-centos-40
     cluster/test-deploy/aws-atomic/*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: cluster-profile-aws-atomic
     cluster/test-deploy/aws-centos/*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: cluster-profile-aws-centos
     cluster/test-deploy/aws-gluster/*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: cluster-profile-aws-gluster
     cluster/test-deploy/gcp-4.0/*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: cluster-profile-gcp-40
     cluster/test-deploy/gcp-crio/*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: cluster-profile-gcp-crio
     cluster/test-deploy/gcp-ha-static/*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: cluster-profile-gcp-ha-static
     cluster/test-deploy/gcp-ha/*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: cluster-profile-gcp-ha
     cluster/test-deploy/gcp-logging/*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: cluster-profile-gcp-logging
     cluster/test-deploy/gcp/*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
       name: cluster-profile-gcp
     cluster/test-deploy/ovirt/*.yaml:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ci
         default:
         - ci
         - ci-stg
