--- a/projects/origin-release/rhel-7-golang-1.13/Dockerfile
+++ b/projects/origin-release/rhel-7-golang-1.13/Dockerfile
@@ -11,6 +11,7 @@ ENV VERSION=1.13.5 \
     GOARM=5 \
     GOPATH=/go \
     GOROOT=/usr/local/go \
+    GOFLAGS='-mod=vendor' \
     LOGNAME=deadbeef
 ENV PATH=$PATH:$GOPATH/bin
 
