Don't force vendoring for integr8ly/cloud-resource-operator

--- a/ci-operator/config/integr8ly/cloud-resource-operator/integr8ly-cloud-resource-operator-master.yaml
+++ b/ci-operator/config/integr8ly/cloud-resource-operator/integr8ly-cloud-resource-operator-master.yaml
@@ -28,7 +28,7 @@ build_root:
     namespace: openshift
     tag: golang-1.13
 
-binary_build_commands: make build COMPILE_TARGET="./build/_output/bin/cloud-resource-operator" GO111MODULE=on
+binary_build_commands: unset GOFLAGS && make build COMPILE_TARGET="./build/_output/bin/cloud-resource-operator" GO111MODULE=on
 
 promotion:
   namespace: integr8ly
@@ -40,10 +40,10 @@ tag_specification:
 
 tests:
 - as: format
-  commands: make code/check
+  commands: unset GOFLAGS && make code/check
   container:
     from: src
 - as: e2e
-  commands: make test/e2e/prow
+  commands: unset GOFLAGS && make test/e2e/prow
   openshift_installer_src:
     cluster_profile: aws
