OKD 4.3: run AWS test on nightly releases

--- a/core-services/release-controller/_releases/release-origin-4.3.json
+++ b/core-services/release-controller/_releases/release-origin-4.3.json
@@ -8,5 +8,9 @@
   "publish":{
     "tag":{"tagRef":{"name":"4.3"}}
   },
-  "verify":{}
+  "verify":{
+    "aws":{
+      "prowJob":{"name":"release-openshift-origin-installer-e2e-aws-4.4"}
+    }
+  }
 }
