Add a local job for running unit tests
Signed-off-by: Federico Paolinelli <fpaoline@redhat.com>

--- a/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
@@ -23,3 +23,7 @@ tests:
     commands: cd features/sctp && make e2etest
     openshift_installer_src:
       cluster_profile: aws
+  - as: unit-tests
+    commands: cd features && make unittests
+    container:
+      from: src
