Adding secret for registry login

--- a/core-services/secret-mirroring/_mapping.yaml
+++ b/core-services/secret-mirroring/_mapping.yaml
@@ -192,3 +192,15 @@ secrets:
   to:
     namespace: bastion-telco
     name: sshd-host-keys
+- from:
+    namespace: odo
+    name: odo-secret
+  to:
+    namespace: ci
+    name: odo-secret
+- from:
+    namespace: odo
+    name: odo-secret
+  to:
+    namespace: ci-stg
+    name: odo-secret
