Turn on UseStatusAvailability in blunderbuss
Allows openshift contributors to temporarily opt-out of blunderbuss using Busy status.

Enabled in k8s prow since May kubernetes/test-infra#12660

This feature increases GH token use as discussed in in kubernetes/test-infra#12348

Signed-off-by: Pris Nasrat <pnasrat@redhat.com>

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -92,6 +92,7 @@ approve:
 blunderbuss:
   max_request_count: 2
   request_count: 2
+  use_status_availability: true
 bugzilla:
   default:
     '*':
