Add explicit namespaces to all ci-operator-misc-configs patterns

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -310,7 +310,8 @@ config_updater:
     ci-operator/config/openshift/kubernetes/*.yaml:
       clusters:
         default:
-        - ""
+        - ci
+        - ci-stg
       name: ci-operator-misc-configs
     ci-operator/config/operator-framework/*/*feature*.yaml:
       clusters:
