Initial prow config for the openshift/hypershift-toolkit repository

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -1072,6 +1072,7 @@ tide:
     - operator-framework/operator-registry
     - operator-framework/presto
     - openshift/file-integrity-operator
+    - openshift/hypershift-toolkit
   - labels:
     - lgtm
     - approved
