--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -94,6 +94,9 @@ approve:
   repos:
   - openshift/installer
   require_self_approval: true
+- repos:
+  - openshift/hypershift-toolkit
+  require_self_approval: false
 blunderbuss:
   max_request_count: 2
   request_count: 2
@@ -1158,6 +1161,9 @@ lgtm:
 - repos:
   - openshift/file-integrity-operator
   review_acts_as_lgtm: true
+- repos:
+  - openshift/hypershift-toolkit
+  review_acts_as_lgtm: true
 override:
   allow_top_level_owners: true
 owners:
@@ -1887,6 +1893,8 @@ plugins:
   openshift/grafana:
   - approve
   openshift/hive:
+  - approve
+  openshift/hypershift-toolkit:
   - approve
   openshift/image-registry:
   - approve
