--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -731,6 +731,8 @@ config_updater:
       name: releases
     core-services/release-controller/_repos/*:
       clusters:
+        ci/api-build01-ci-devcluster-openshift-com:6443:
+        - ocp
         default:
         - ocp
       name: base-repos
