boskos: emit debug logging
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/core-services/prow/03_deployment/boskos.yaml
+++ b/core-services/prow/03_deployment/boskos.yaml
@@ -71,6 +71,7 @@ objects:
           args:
           - --config=/etc/config/boskos.yaml
           - --namespace=${namespace}
+          - --log-level=debug
           ports:
             - containerPort: 8080
               protocol: TCP
