Add findutils to shellcheck image
The package findutils provides find and xargs which are needed
for the registry shellcheck script but are not included in the
base fedora container image.

This also adds a ConfigChange trigger to the BuildConfig.

--- a/services/validation-images/shellcheck/Dockerfile
+++ b/services/validation-images/shellcheck/Dockerfile
@@ -1,4 +1,4 @@
 FROM fedora:31
 
 # Install required packages
-RUN dnf update -y; dnf install -y ShellCheck; dnf clean all
+RUN dnf update -y; dnf install -y findutils ShellCheck; dnf clean all
