--- a/services/validation-images/shellcheck/shellcheck.yaml
+++ b/services/validation-images/shellcheck/shellcheck.yaml
@@ -14,6 +14,8 @@ items:
     labels:
       ci.openshift.io/source-repo: release
   spec:
+    triggers:
+    - type: "ConfigChange"
     failedBuildsHistoryLimit: 2
     output:
       to:
