require explicit approve from approvers on openshift/installer repo
various fields are https://godoc.org/k8s.io/test-infra/prow/plugins#Approve

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -89,6 +89,10 @@ approve:
   repos:
   - openshift-kni/baremetal-deploy
   require_self_approval: true
+- ignore_review_state: false
+  repos:
+  - openshift/installer
+  require_self_approval: true
 blunderbuss:
   max_request_count: 2
   request_count: 2
