Use golang1.13 as build base
Signed-off-by: Chmouel Boudjnah <chmouel@redhat.com>

--- a/ci-operator/config/openshift/tektoncd-triggers/openshift-tektoncd-triggers-release-next.yaml
+++ b/ci-operator/config/openshift/tektoncd-triggers/openshift-tektoncd-triggers-release-next.yaml
@@ -10,8 +10,10 @@ base_images:
     namespace: ocp
     tag: base
 build_root:
-  project_image:
-    dockerfile_path: openshift/ci-operator/build-image/Dockerfile
+  image_stream_tag:
+    name: release
+    namespace: openshift
+    tag: golang-1.13
 canonical_go_repository: github.com/tektoncd/triggers
 binary_build_commands: make install
 images:
