Rework the sctp e2e tests command as per the latest change in kni-baremetal/deploy structure.
Signed-off-by: Federico Paolinelli <fpaoline@redhat.com>

--- a/ci-operator/jobs/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master-presubmits.yaml
@@ -42,7 +42,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: sctp-e2e
         - name: TEST_COMMAND
-          value: cd features/sctp && make e2etest
+          value: cd features && export FEATURES=sctp && make deploy && make functests
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
