--- a/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
@@ -20,7 +20,7 @@ resources:
       memory: 200Mi
 tests:
   - as: sctp-e2e
-    commands: cd features/sctp && make e2etest
+    commands: cd features && export FEATURES=sctp && make deploy && make functests
     openshift_installer_src:
       cluster_profile: aws
   - as: unit-tests
