--- a/clusters/build-clusters/01_cluster/prow/03_deployment/admin_hook_rbac.yaml
+++ b/clusters/build-clusters/01_cluster/prow/03_deployment/admin_hook_rbac.yaml
@@ -65,3 +65,30 @@ items:
   - kind: ServiceAccount
     name: hook
     namespace: ci
+- kind: Role
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: hook
+    namespace: ocp
+  rules:
+    - apiGroups:
+        - ""
+      resources:
+        - configmaps
+      verbs:
+        - get
+        - update
+        - create
+- kind: RoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: hook
+    namespace: ocp
+  roleRef:
+    apiGroup: rbac.authorization.k8s.io
+    kind: Role
+    name: hook
+  subjects:
+  - kind: ServiceAccount
+    name: hook
+    namespace: ci
