Add a modification from cluster CM to committed version

--- a/core-services/cluster/logging/admin_fluentd-configmap.yaml
+++ b/core-services/cluster/logging/admin_fluentd-configmap.yaml
@@ -69,6 +69,10 @@ data:
       time_format %Y-%m-%dT%H:%M:%S%Z
     </filter>
 
+    <filter raw.kubernetes.**>
+      type stdout
+    </filter>
+
     <match reform.**>
       type record_reformer
       enable_ruby true
