Revert "Don't force vendoring for openshift/file-integrity-operator"
This reverts commit 10e280e33e042b7f2ea2dd82ff426c22ff7b669e.

--- a/ci-operator/jobs/openshift/file-integrity-operator/openshift-file-integrity-operator-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/file-integrity-operator/openshift-file-integrity-operator-master-presubmits.yaml
@@ -40,7 +40,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e-aws
         - name: TEST_COMMAND
-          value: unset GOFLAGS && make e2e
+          value: make e2e
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
