--- a/ci-operator/config/openshift/file-integrity-operator/openshift-file-integrity-operator-master.yaml
+++ b/ci-operator/config/openshift/file-integrity-operator/openshift-file-integrity-operator-master.yaml
@@ -27,18 +27,18 @@ tag_specification:
   namespace: ocp
 tests:
 - as: go-build
-  commands: unset GOFLAGS && make
+  commands: make
   container:
     from: src
 - as: unit
-  commands: unset GOFLAGS && make test-unit
+  commands: make test-unit
   container:
     from: src
 - as: verify
-  commands: unset GOFLAGS && make verify
+  commands: make verify
   container:
     from: src
 - as: e2e-aws
-  commands: unset GOFLAGS && make e2e
+  commands: make e2e
   openshift_installer_src:
     cluster_profile: aws
