--- a/ci-operator/config/openshift/managed-velero-operator/openshift-managed-velero-operator-master.yaml
+++ b/ci-operator/config/openshift/managed-velero-operator/openshift-managed-velero-operator-master.yaml
@@ -8,9 +8,14 @@ build_root:
     name: release
     namespace: openshift
     tag: golang-1.13
+binary_build_commands: unset GOFLAGS && make
 images:
 - dockerfile_path: build/Dockerfile
-  from: base
+  from: bin
+  inputs:
+    bin:
+      as:
+      - registry.svc.ci.openshift.org/openshift/release:golang-1.13
   to: managed-velero-operator
 promotion:
   name: "4.4"
@@ -28,6 +33,7 @@ tag_specification:
 tests:
 - as: verify
   commands: |
+    unset GOFLAGS
     export GOLANGCI_LINT_VERSION=1.21.0
     export GOLANGCI_LINT_CACHE=/tmp/.cache
     curl -sfL "https://github.com/golangci/golangci-lint/releases/download/v${GOLANGCI_LINT_VERSION}/golangci-lint-${GOLANGCI_LINT_VERSION}-linux-amd64.tar.gz" | tar -C /go/bin -zx --strip-components=1 "golangci-lint-${GOLANGCI_LINT_VERSION}-linux-amd64/golangci-lint"
@@ -37,6 +43,7 @@ tests:
     from: src
 - as: test
   commands: |
+    unset GOFLAGS
     make test
   container:
     from: src
