Bootstrapping secret mirroring for new multi-arch release-controllers

--- a/core-services/release-controller/admin_deploy-ocp-controller-s390x.yaml
+++ b/core-services/release-controller/admin_deploy-ocp-controller-s390x.yaml
@@ -5,6 +5,10 @@ items:
   apiVersion: v1
   metadata:
     name: ocp-s390x
+- kind: Namespace
+  apiVersion: v1
+  metadata:
+    name: ci-release-s390x
 # pull access to authenticated users
 - kind: RoleBinding
   apiVersion: rbac.authorization.k8s.io/v1beta1
