--- a/core-services/release-controller/admin_deploy-ocp-controller-ppc64le.yaml
+++ b/core-services/release-controller/admin_deploy-ocp-controller-ppc64le.yaml
@@ -5,6 +5,10 @@ items:
   apiVersion: v1
   metadata:
     name: ocp-ppc64le
+- kind: Namespace
+  apiVersion: v1
+  metadata:
+    name: ci-release-ppc64le
 # pull access to authenticated users
 - kind: RoleBinding
   apiVersion: rbac.authorization.k8s.io/v1beta1
