Enabling secret mirroring into the architecture specific job namespace

--- a/core-services/secret-mirroring/_mapping.yaml
+++ b/core-services/secret-mirroring/_mapping.yaml
@@ -204,3 +204,39 @@ secrets:
   to:
     namespace: ci-stg
     name: odo-secret
+- from:
+    namespace: ci-release
+    name: files-pull-secret
+  to:
+    namespace: ci-release-ppc64le
+    name: files-pull-secret
+- from:
+    namespace: ci-release
+    name: git-credentials
+  to:
+    namespace: ci-release-ppc64le
+    name: git-credentials
+- from:
+    namespace: ci-release
+    name: source
+  to:
+    namespace: ci-release-ppc64le
+    name: source
+- from:
+    namespace: ci-release
+    name: files-pull-secret
+  to:
+    namespace: ci-release-s390x
+    name: files-pull-secret
+- from:
+    namespace: ci-release
+    name: git-credentials
+  to:
+    namespace: ci-release-s390x
+    name: git-credentials
+- from:
+    namespace: ci-release
+    name: source
+  to:
+    namespace: ci-release-s390x
+    name: source
