Add triggers and pipelines-tutorial
Add triggers and pipelines-tutorial to config
so that auto-merge will work

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -1032,6 +1032,7 @@ tide:
     - openshift/ovn-kubernetes
     - openshift/pagerduty-operator
     - openshift/pipelines-catalog
+    - openshift/pipelines-tutorial
     - openshift/pod-checkpointer-operator
     - openshift/private-ci-testing
     - openshift/prometheus
@@ -1054,6 +1055,7 @@ tide:
     - openshift/tektoncd-cli
     - openshift/tektoncd-pipeline-operator
     - openshift/tektoncd-catalog
+    - openshift/tektoncd-triggers
     - openshift/telemeter
     - openshift/template-service-broker
     - openshift/template-service-broker-operator
