redhat-developer/helm: Move Makefile under openshift-ci dir.

--- a/ci-operator/config/redhat-developer/helm/redhat-developer-helm-master.yaml
+++ b/ci-operator/config/redhat-developer/helm/redhat-developer-helm-master.yaml
@@ -4,7 +4,7 @@ base_images:
     namespace: ocp
     tag: base
 
-binary_build_commands: make -f Makefile.redhat build
+binary_build_commands: make -f openshift-ci/Makefile build
 
 build_root:
   project_image:
@@ -33,10 +33,10 @@ tag_specification:
 
 tests:
 - as: unit
-  commands: make -f Makefile.redhat test-unit
+  commands: make -f openshift-ci/Makefile unit
   container:
     from: src
 - as: lint
-  commands: make -f Makefile.redhat lint
+  commands: make -f openshift-ci/Makefile lint
   container:
     from: src
