enable spyglass in deck-internal

--- a/core-services/prow/03_deployment/deck.yaml
+++ b/core-services/prow/03_deployment/deck.yaml
@@ -302,6 +302,7 @@ objects:
           - --tide-url=http://tide/
           - --hook-url=http://hook:8888/plugin-help
           - --hidden-only=true
+          - --spyglass=true
           - --cookie-secret=/etc/proxy/secrets/session_secret
           - --gcs-credentials-file=/etc/gce-sa-credentials-gcs-private/service-account.json
           ports:
