add deck internal job url prefix

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -345,6 +345,8 @@ plank:
       gcs_credentials_secret: gce-sa-credentials-gcs-private
   job_url_prefix_config:
     '*': https://prow.svc.ci.openshift.org/view/gcs/
+    openshift-priv: https://deck-internal-ci.svc.ci.openshift.org/view/gcs/
+    openshift/private-ci-testing: https://deck-internal-ci.svc.ci.openshift.org/view/gcs/
   job_url_template: https://prow.svc.ci.openshift.org/view/gcs/origin-ci-test/{{if
     eq .Spec.Type "presubmit"}}pr-logs/pull{{else if eq .Spec.Type "batch"}}pr-logs/pull{{else}}logs{{end}}{{if
     ne .Spec.Refs.Repo "origin"}}/{{.Spec.Refs.Org}}_{{.Spec.Refs.Repo}}{{end}}{{if
