Add jobs for scapresults repo
The scapresults repo contains the workload that the compliance-operator
runs. This we'll need to start building images for this.

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -609,6 +609,7 @@ tide:
     - openshift/rbac-permissions-operator
     - openshift/router
     - openshift/runtime-utils
+    - openshift/scapresults
     - openshift/sdn
     - openshift/service-catalog
     - openshift/service-ca-operator
@@ -803,6 +804,7 @@ tide:
     - openshift/rbac-permissions-operator
     - openshift/router
     - openshift/runtime-utils
+    - openshift/scapresults
     - openshift/sdn
     - openshift/service-catalog
     - openshift/service-ca-operator
@@ -1047,6 +1049,7 @@ tide:
     - openshift/router
     - openshift/runtime-utils
     - openshift-s2i/s2i-wildfly
+    - openshift/scapresults
     - openshift/sdn
     - openshift/service-catalog
     - openshift/service-ca-operator
