--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -2086,6 +2086,8 @@ plugins:
   - approve
   openshift/runtime-utils:
   - approve
+  openshift/scapresults:
+  - approve
   openshift/sdn:
   - approve
   openshift/service-ca-operator:
