Add a periodic job that runs the whole suite every 8 hours.
Signed-off-by: Federico Paolinelli <fpaoline@redhat.com>

--- a/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
@@ -19,7 +19,7 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
-  - as: sctp-e2e
+  - as: sctp-e2e-aws
     commands: cd features && export FEATURES=sctp && make deploy && make functests
     openshift_installer_src:
       cluster_profile: aws
@@ -27,3 +27,8 @@ tests:
     commands: cd features && make unittests
     container:
       from: src
+  - as: e2e-aws
+    cron: "* */8 * * *"
+    commands: cd features && make deploy && make functests
+    openshift_installer_src:
+      cluster_profile: aws
