Avoid overwritting GOFLAGS

--- a/ci-operator/config/openshift/oc/openshift-oc-master.yaml
+++ b/ci-operator/config/openshift/oc/openshift-oc-master.yaml
@@ -92,7 +92,7 @@ rpm_build_location: _rpmbuild/RPMS/
 tag_specification:
   name: "4.4"
   namespace: ocp
-test_binary_build_commands: make build GOFLAGS='-race' --warn-undefined-variables
+test_binary_build_commands: make build GO_BUILD_FLAGS:='-race' --warn-undefined-variables
 tests:
 - as: build-rpms-from-tar
   commands: '# noop, just to force the building the `rpms` target'
