--- a/ci-operator/config/tnozicka/openshift-acme/tnozicka-openshift-acme-master.yaml
+++ b/ci-operator/config/tnozicka/openshift-acme/tnozicka-openshift-acme-master.yaml
@@ -19,8 +19,8 @@ build_root:
     tag: golang-1.10
 
 
-binary_build_commands: make build GOFLAGS='-v'
-test_binary_build_commands: make build GOFLAGS='-v -race'
+binary_build_commands: make build GO_BUILD_FLAGS:='-v' --warn-undefined-variables
+test_binary_build_commands: make build GO_BUILD_FLAGS:='-v -race' --warn-undefined-variables
 
 images:
 - dockerfile_path: images/openshift-acme-controller/Dockerfile
@@ -41,7 +41,7 @@ tag_specification:
 
 tests:
 - as: verify
-  commands: make verify -k
+  commands: make verify -k --warn-undefined-variables
   container:
     from: bin
 
