--- a/ci-operator/config/openshift/cluster-openshift-apiserver-operator/openshift-cluster-openshift-apiserver-operator-master.yaml
+++ b/ci-operator/config/openshift/cluster-openshift-apiserver-operator/openshift-cluster-openshift-apiserver-operator-master.yaml
@@ -25,7 +25,7 @@ resources:
 tag_specification:
   name: "4.4"
   namespace: ocp
-test_binary_build_commands: make build GOFLAGS='-race' --warn-undefined-variables
+test_binary_build_commands: make build GO_BUILD_FLAGS:='-race' --warn-undefined-variables
 tests:
 - as: verify
   commands: |
@@ -47,7 +47,7 @@ tests:
   as: e2e-aws-operator
   commands: |
     mkdir -p /tmp/artifacts
-    make test-e2e JUNITFILE=/tmp/artifacts/junit_report.xml
+    make test-e2e JUNITFILE=/tmp/artifacts/junit_report.xml --warn-undefined-variables
   openshift_installer_src:
     cluster_profile: aws
 - as: e2e-aws-upgrade
@@ -59,13 +59,13 @@ tests:
   as: e2e-aws-operator-encryption
   commands: |
     mkdir -p /tmp/artifacts
-    make test-e2e-encryption JUNITFILE=/tmp/artifacts/junit_report.xml
+    make test-e2e-encryption JUNITFILE=/tmp/artifacts/junit_report.xml --warn-undefined-variables
   openshift_installer_src:
     cluster_profile: aws
 - artifact_dir: /tmp/artifacts
   as: e2e-aws-operator-encryption-perf
   commands: |
     mkdir -p /tmp/artifacts
-    make test-e2e-encryption-perf JUNITFILE=/tmp/artifacts/junit_report.xml
+    make test-e2e-encryption-perf JUNITFILE=/tmp/artifacts/junit_report.xml --warn-undefined-variables
   openshift_installer_src:
     cluster_profile: aws
