--- a/ci-operator/config/openshift/must-gather/openshift-must-gather-master.yaml
+++ b/ci-operator/config/openshift/must-gather/openshift-must-gather-master.yaml
@@ -26,7 +26,7 @@ resources:
 tag_specification:
   name: "4.4"
   namespace: ocp
-test_binary_build_commands: make build GOFLAGS='-race' --warn-undefined-variables
+test_binary_build_commands: make build GO_BUILD_FLAGS:='-race' --warn-undefined-variables
 tests:
 - as: e2e-aws
   commands: TEST_SUITE=openshift/conformance/parallel run-tests
