--- a/ci-operator/jobs/openshift/cluster-openshift-apiserver-operator/openshift-cluster-openshift-apiserver-operator-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-openshift-apiserver-operator/openshift-cluster-openshift-apiserver-operator-master-presubmits.yaml
@@ -112,7 +112,7 @@ presubmits:
         - name: TEST_COMMAND
           value: |
             mkdir -p /tmp/artifacts
-            make test-e2e JUNITFILE=/tmp/artifacts/junit_report.xml
+            make test-e2e JUNITFILE=/tmp/artifacts/junit_report.xml --warn-undefined-variables
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -185,7 +185,7 @@ presubmits:
         - name: TEST_COMMAND
           value: |
             mkdir -p /tmp/artifacts
-            make test-e2e-encryption JUNITFILE=/tmp/artifacts/junit_report.xml
+            make test-e2e-encryption JUNITFILE=/tmp/artifacts/junit_report.xml --warn-undefined-variables
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -258,7 +258,7 @@ presubmits:
         - name: TEST_COMMAND
           value: |
             mkdir -p /tmp/artifacts
-            make test-e2e-encryption-perf JUNITFILE=/tmp/artifacts/junit_report.xml
+            make test-e2e-encryption-perf JUNITFILE=/tmp/artifacts/junit_report.xml --warn-undefined-variables
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
