--- a/ci-operator/config/openshift/origin/openshift-origin-master.yaml
+++ b/ci-operator/config/openshift/origin/openshift-origin-master.yaml
@@ -1,30 +1,36 @@
 base_images:
   base:
+    cluster: https://api.ci.openshift.org
     name: "4.4"
     namespace: ocp
     tag: base
   base-machine:
+    cluster: https://api.ci.openshift.org
     name: fedora
     namespace: openshift
     tag: "29"
   cli:
+    cluster: https://api.ci.openshift.org
     name: "4.4"
     namespace: ocp
     tag: cli
   machine-os-content-base:
+    cluster: https://api.ci.openshift.org
     name: "4.4"
     namespace: ocp
     tag: machine-os-content
   oc-rpms:
+    cluster: https://api.ci.openshift.org
     name: "4.4"
     namespace: ocp
     tag: oc-rpms
 binary_build_commands: make build
 build_root:
   image_stream_tag:
+    cluster: https://api.ci.openshift.org
     name: release
     namespace: openshift
-    tag: golang-1.13
+    tag: golang-1.12
 images:
 - dockerfile_path: images/hyperkube/Dockerfile.rhel
   from: base
@@ -182,6 +188,7 @@ resources:
       memory: 8Gi
 rpm_build_commands: make build-rpms
 tag_specification:
+  cluster: https://api.ci.openshift.org
   name: "4.4"
   namespace: ocp
 tests:
