Debugging: e2e-gcp-upgrade rehearsal

--- a/ci-operator/config/openshift/origin/openshift-origin-master.yaml
+++ b/ci-operator/config/openshift/origin/openshift-origin-master.yaml
@@ -237,7 +237,7 @@ tests:
   openshift_installer:
     cluster_profile: aws
 - as: e2e-gcp-upgrade
-  commands: TEST_SUITE=all run-upgrade-tests
+  commands: FOO=BAR TEST_SUITE=all run-upgrade-tests
   openshift_installer:
     cluster_profile: gcp
     upgrade: true
