--- a/ci-operator/config/openshift/managed-velero-operator/openshift-managed-velero-operator-master.yaml
+++ b/ci-operator/config/openshift/managed-velero-operator/openshift-managed-velero-operator-master.yaml
@@ -11,12 +11,7 @@ build_root:
     tag: golang-1.13
 images:
 - dockerfile_path: build/Dockerfile
-  from: bin
-  inputs:
-    bin:
-      as:
-      - registry.svc.ci.openshift.org/openshift/release:golang-1.13
-      paths: null
+  from: base
   to: managed-velero-operator
 promotion:
   name: "4.4"
@@ -34,7 +29,6 @@ tag_specification:
 tests:
 - as: verify
   commands: |
-    unset GOFLAGS
     export GOLANGCI_LINT_VERSION=1.21.0
     export GOLANGCI_LINT_CACHE=/tmp/.cache
     curl -sfL "https://github.com/golangci/golangci-lint/releases/download/v${GOLANGCI_LINT_VERSION}/golangci-lint-${GOLANGCI_LINT_VERSION}-linux-amd64.tar.gz" | tar -C /go/bin -zx --strip-components=1 "golangci-lint-${GOLANGCI_LINT_VERSION}-linux-amd64/golangci-lint"
@@ -44,7 +38,6 @@ tests:
     from: src
 - as: test
   commands: |
-    unset GOFLAGS
     make test
   container:
     from: src
