Adding plugin changes for logging feature branch

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -322,6 +322,12 @@ config_updater:
         - ci
         - ci-stg
       name: ci-operator-misc-configs
+    ci-operator/config/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature*.yaml:
+      clusters:
+        default:
+        - ci
+        - ci-stg
+      name: ci-operator-misc-configs
     ci-operator/config/operator-framework/*/*feature*.yaml:
       clusters:
         default:
@@ -471,6 +477,12 @@ config_updater:
         default:
         - ""
       gzip: true
+      name: job-config-misc
+    ci-operator/jobs/openshift/origin-aggregated-logging/openshift-origin-aggregated-logging-feature*.yaml:
+      clusters:
+        default:
+        - ci
+        - ci-stg
       name: job-config-misc
     ci-operator/jobs/operator-framework/*/*feature*.yaml:
       clusters:
