--- a/ci-operator/jobs/tnozicka/openshift-acme/tnozicka-openshift-acme-master-presubmits.yaml
+++ b/ci-operator/jobs/tnozicka/openshift-acme/tnozicka-openshift-acme-master-presubmits.yaml
@@ -40,7 +40,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e-cluster-wide
         - name: TEST_COMMAND
-          value: hack/ci-run-e2e-cluster-wide.sh
+          value: make test-e2e-cluster-wide --warn-undefined-variables
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -110,7 +110,7 @@ presubmits:
         - name: JOB_NAME_SAFE
           value: e2e-single-namespace
         - name: TEST_COMMAND
-          value: hack/ci-run-e2e-single-namespace.sh
+          value: make test-e2e-single-namespace --warn-undefined-variables
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
