--- a/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
@@ -477,6 +477,7 @@ periodics:
     job-env: aws
     job-test: e2e
     job-type: upgrade
+    tag: "1"
   name: release-openshift-origin-installer-e2e-aws-upgrade
   spec:
     containers:
