--- a/core-services/release-controller/deploy-ocp-controller.yaml
+++ b/core-services/release-controller/deploy-ocp-controller.yaml
@@ -154,4 +154,5 @@ items:
           - --artifacts=openshift-release-artifacts.svc.ci.openshift.org
           - --prow-namespace=ci
           - --job-namespace=ci-release
+          - --tools-image-stream-tag=4.4:tests
           - -v=4
