--- a/core-services/release-controller/deploy-origin-controller.yaml
+++ b/core-services/release-controller/deploy-origin-controller.yaml
@@ -124,4 +124,5 @@ items:
           - --job-config=/etc/job-config
           - --prow-namespace=ci
           - --job-namespace=ci-release
+          - --tools-image-stream-tag=4.4:tests
           - -v=4
