--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.5-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.5-periodics.yaml
@@ -433,6 +433,26 @@ periodics:
         commit_id="$( <${dir}/meta.json jq -r '."ostree-commit"' )"
         ostree_ref="fedora/x86_64/coreos/${stream}"
 
+        # Build a semantic version as best we can from the build id, dropping any other
+        # segments. Each version of machine-os-content is responsible for setting a
+        # semver and this is only a workaround for now.
+        if [[ ! "${build_id}" =~ ^(([0-9]+)\.)(([0-9]+)\.)?(([0-9]+)($|\.))? ]]; then
+          echo "Build ID did not contain at least one major version"
+          exit 1
+        fi
+        build_semver="${BASH_REMATCH[1]}"
+        if [[ -n ${BASH_REMATCH[4]} ]]; then
+          build_semver+="${BASH_REMATCH[3]}"
+        else
+          build_semver+="0."
+        fi
+        if [[ -n "${BASH_REMATCH[6]}" ]]; then
+          build_semver+="${BASH_REMATCH[6]}"
+        else
+          build_semver+="0"
+        fi
+
+
         # compare the latest image we have built against the potential candidate
         latest="$( oc get istag -n fcos ${TAG}:${BRANCH} --template '{{ index .image.dockerImageMetadata.Config.Labels "version" }} {{ index .image.dockerImageMetadata.Config.Labels "id-artifacts" }} {{ index .image.dockerImageMetadata.Config.Labels "id-machine-config-operator-rpms" }}' )"
         candidate="${build_id} ${origin_artifacts_id} ${origin_machine_config_operator_rpms_id}"
@@ -506,7 +526,9 @@ periodics:
               COPY --from=build /srv/ /srv/
               LABEL version=${build_id} \\
                     id-artifacts=${origin_artifacts_id} \\
-                    id-machine-config-operator-rpms=${origin_machine_config_operator_rpms_id}
+                    id-machine-config-operator-rpms=${origin_machine_config_operator_rpms_id} \\
+                    "io.openshift.build.versions=machine-os=${build_semver}" \\
+                    "io.openshift.build.version-display-names=machine-os=Fedora CoreOS"
               ENTRYPOINT ["/noentry"]
 
           strategy:
