add SSH Bastion for OVN Bare Metal CI

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -790,6 +790,11 @@ config_updater:
         - ""
       key: mapping.yaml
       name: secret-mirroring
+    core-services/sshd-bastion/ovn/sshd_config:
+      clusters:
+        default:
+        - bastion-ovn
+      name: sshd-config-ovn
     core-services/sshd-bastion/telco/sshd_config:
       clusters:
         default:
