--- a/core-services/secret-mirroring/_mapping.yaml
+++ b/core-services/secret-mirroring/_mapping.yaml
@@ -193,6 +193,18 @@ secrets:
     namespace: bastion-telco
     name: sshd-host-keys
 - from:
+    namespace: ci
+    name: sshd-authorized-keys-ovn
+  to:
+    namespace: bastion-ovn
+    name: sshd-authorized-keys
+- from:
+    namespace: ci
+    name: sshd-host-keys-ovn
+  to:
+    namespace: bastion-ovn
+    name: sshd-host-keys
+- from:
     namespace: odo
     name: odo-secret
   to:
