Fix more jobs without --lease-server

--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
@@ -15,6 +15,7 @@ periodics:
         set -euo pipefail
 
         ci-operator --artifact-dir=$(ARTIFACTS) \
+          --lease-server=http://boskos \
           --secret-dir=/usr/local/ci-credentials \
           --secret-dir=/usr/local/endurance-cluster-credentials-aws \
           --secret-dir=/usr/local/aws-openshift-llc-account-credentials \
@@ -3280,6 +3281,7 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
+      - --lease-server=http://boskos
       - --secret-dir=/usr/local/pull-secret
       - --secret-dir=/usr/local/e2e-aws-upgrade-cluster-profile
       - --target=e2e-aws-upgrade
@@ -3833,6 +3835,7 @@ periodics:
         oc annotate pj/${PROW_JOB_ID} "release.openshift.io/from-tag=${from}" "release.openshift.io/tag=${to}" "release.openshift.io/source=ocp/$(BRANCH)"
 
         ci-operator --artifact-dir=$(ARTIFACTS) \
+          --lease-server=http://boskos \
           --give-pr-author-access-to-namespace=true --template=/usr/local/e2e-$(CLUSTER_TYPE)-fips \
           --secret-dir=/usr/local/pull-secret --secret-dir=/usr/local/e2e-aws-fips-cluster-profile \
           --target=e2e-aws-fips --input-hash=$(BUILD_ID) --input-hash=$(JOB_NAME) --lease-server=http://boskos
