--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.4-periodics.yaml
@@ -388,7 +388,9 @@ periodics:
     workdir: true
   interval: 24h
   labels:
+    ci.openshift.io/release-type: informing
     job-release: "4.4"
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
   name: promote-release-openshift-okd-machine-os-content-e2e-aws-4.4
   spec:
     containers:
@@ -520,10 +522,30 @@ periodics:
         oc -n ${namespace} create is machine-os-content >/dev/null
         build ${dir}/build.yaml machine-os-content
 
+        # Craft a release image
+        set -x
+        MOC_SHA256=$(oc get -n "${namespace}" istag/machine-os-content:latest -o template='{{ .image.metadata.name }}' )
+        export RELEASE_IMAGE_LATEST=registry.svc.ci.openshift.org/${namespace}/release:latest
+        oc registry login
+        oc adm release new -n origin \
+          --from-image-stream=$(BRANCH) \
+          --to-image=${RELEASE_IMAGE_LATEST} \
+          machine-os-content=registry.svc.ci.openshift.org/${namespace}/machine-os-content@${MOC_SHA256}
+        # execute the test
+        export RELEASE_IMAGE_INITIAL=${RELEASE_IMAGE_LATEST}
+        ci-operator \
+          --artifact-dir=$(ARTIFACTS) \
+          --secret-dir=/usr/local/pull-secret \
+          --secret-dir=/usr/local/e2e-$(CLUSTER_TYPE)-cluster-profile \
+          --template=/usr/local/e2e-aws \
+          --target=e2e-$(CLUSTER_TYPE) \
+          --input-hash=$(BUILD_ID) --input-hash=$(JOB_NAME) \
+          --lease-server=http://boskos
+
         # debug output
         oc describe -n ${namespace} istag/machine-os-content:latest
         oc tag ${namespace}/machine-os-content:latest fcos/machine-os-content:${BRANCH}
-        oc tag fcos/machine-os-content:${BRANCH} ${TAG_NS}/${BRANCH}:machine-os-content
+        oc tag fcos/machine-os-content:${BRANCH} ${namespace}/machine-os-content@${MOC_SHA256}
       env:
       - name: TAG_NS
         value: origin
@@ -536,10 +558,30 @@ periodics:
       - name: CLUSTER_TYPE
         value: aws
       - name: CONFIG_SPEC
-        valueFrom:
-          configMapKeyRef:
-            key: openshift-origin-release-4.4.yaml
-            name: ci-operator-4.4-configs
+        value: |
+          tag_specification:
+            name: "none" # don't import anything to avoid a race between 4.2 latest and the chosen version
+            namespace: ocp
+          build_root:
+            image_stream_tag:
+              cluster: https://api.ci.openshift.org
+              name: release
+              namespace: openshift
+              tag: golang-1.12
+          resources:
+            '*':
+              limits:
+                memory: 4Gi
+              requests:
+                cpu: 100m
+                memory: 200Mi
+          tests:
+          - as: e2e-$(CLUSTER_TYPE)
+            commands: |
+              TEST_SUITE=openshift/conformance/parallel run-tests run-tests
+            openshift_installer:
+              cluster_profile: "$(CLUSTER_TYPE)"
+              upgrade: true
       - name: JOB_NAME_SAFE
         value: e2e-aws
       - name: TEST_COMMAND
