Use the provided dockerfile for the src image
Signed-off-by: Federico Paolinelli <fpaoline@redhat.com>

--- a/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
@@ -4,10 +4,9 @@ base_images:
     namespace: ocp
     tag: base
 build_root:
-  image_stream_tag:
-    name: release
-    namespace: openshift
-    tag: golang-1.13
+  project_image:
+    dockerfile_path: Dockefile.buildimage
+    context_dir: features/
 tag_specification:
   name: "4.3"
   namespace: ocp
