Source test fixtures before running e2e tests
Signed-off-by: Federico Paolinelli <fpaoline@redhat.com>

--- a/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master.yaml
@@ -28,6 +28,6 @@ tests:
       from: src
   - as: e2e-aws
     cron: "* */8 * * *"
-    commands: cd features && make deploy && make functests
+    commands: cd features && source hack/test_env.sh && make deploy && make functests
     openshift_installer_src:
       cluster_profile: aws
