--- a/ci-operator/jobs/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master-periodics.yaml
+++ b/ci-operator/jobs/openshift-kni/baremetal-deploy/openshift-kni-baremetal-deploy-master-periodics.yaml
@@ -39,7 +39,7 @@ periodics:
       - name: JOB_NAME_SAFE
         value: e2e-aws
       - name: TEST_COMMAND
-        value: cd features && make deploy && make functests
+        value: cd features && source hack/test_env.sh && make deploy && make functests
       image: ci-operator:latest
       imagePullPolicy: Always
       name: ""
