--- a/core-services/release-controller/_releases/release-ocp-4.5-ci.json
+++ b/core-services/release-controller/_releases/release-ocp-4.5-ci.json
@@ -27,6 +27,7 @@
           "baremetal-runtimecfg",
           "sig-storage-local-static-provisioner",
           "ironic",
+          "ironic-hardware-inventory-recorder",
           "ironic-inspector",
           "ironic-ipa-downloader",
           "ironic-rhcos-downloader",
