--- a/ci-operator/config/openshift/oc/openshift-oc-master.yaml
+++ b/ci-operator/config/openshift/oc/openshift-oc-master.yaml
@@ -23,7 +23,7 @@ images:
   inputs:
     bin:
       as:
-      - registry.svc.ci.openshift.org/ocp/builder:golang-1.12
+      - builder
       paths: null
   to: cli
 - dockerfile_path: images/cli/Dockerfile.rhel
@@ -31,7 +31,7 @@ images:
   inputs:
     bin:
       as:
-      - registry.svc.ci.openshift.org/ocp/builder:golang-1.12
+      - builder
       paths: null
   to: tests
 - dockerfile_path: images/cli/Dockerfile.rhel
@@ -39,7 +39,7 @@ images:
   inputs:
     bin:
       as:
-      - registry.svc.ci.openshift.org/ocp/builder:golang-1.12
+      - builder
       paths: null
   to: must-gather
 - context_dir: images/deployer/
